@@ -1,10 +1,14 @@
 --- CHANGELOG ---
 
 
+--- Assimulo-3.3.1 ---
+    * Minor refactoring of Radau5 C implementation:
+      Now uses actual return value to return error codes. idid is return of solout callback.
+
 --- Assimulo-3.3 ---
     * Sundials 6.x port
     * Radau5ODE and Radau5DAE now correctly terminate from unrecoverable errors in right-hand side and Jacobian calls.
-    * Added support for sparse LU decompositons (via SuperLU) in Radau5 solver. 
+    * Added support for sparse LU decompositions (via SuperLU) in Radau5 solver. 
       This is only available with the C version of the Radau5 solver.
     * Changed attribute name Radau5ODE.solver to Radau5ODE.implementation.
       Removed support for Radau5DAE.implementation = 'c'
